k8s/05-minio-storage.yaml
apiVersion: v1
kind: Service
metadata:
  name: minio-service
  namespace: givin-system
spec:
  ports:
    - port: 9000
      name: s3-api
    - port: 9001
      name: web-console
  selector:
    app: minio
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: minio
  namespace: givin-system
spec:
  serviceName: minio-service
  replicas: 1
  selector:
    matchLabels:
      app: minio
  template:
    metadata:
      labels:
        app: minio
    spec:
      containers:
        - name: minio
          image: minio/minio:RELEASE.2024-04-18T19-09-19Z
          command:
            - "minio"
            - "server"
            - "/data"
            - "--console-address"
            - ":9001"
          ports:
            - containerPort: 9000
              name: s3-api
            - containerPort: 9001
              name: web-console
          resources:
            requests:
              cpu: "1000m"
              memory: "2Gi"
            limits:
              cpu: "2000m"
              memory: "4Gi"
          volumeMounts:
            - name: minio-storage
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: minio-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 1000Gi
